systemd (214-1) UNRELEASED; urgency=medium

  * New upstream release v214.

  [ Jon Severinsson ]
  * Import upstream v214-stable patch series.
    - Rebase remaining Debian patches on top of v214-stable.
    - Drop modifications to the now-removed built-in sysvinit support.

  [ Sjoerd Simons ]
  * debian/patches/shared-include-stdbool.h-in-mkdir.h.patch
    + Added. Include stdbool before using bool in function prototypes. Fixes
      build of the insserv generator
  * Add python-lxml to build-depends for python-systemd
  * Turn on parallel build support
  * Install the new busctl binary and translations
  * Explicitly disable microhttp so the package build doesn't fail if the
    required dependencies for it happen to be installed.

 -- Jon Severinsson <jon@severinsson.net>  Sun, 16 Jul 2014 20:00:00 +0200

systemd (208-6) unstable; urgency=medium

  [ Jon Severinsson ]
  * Add v208-stable patch series.
    - Update Debian patches to apply on top of v208-stable.
    - Move new manpages to libsystemd-*-dev as appropriate.

  [ Michael Biebl ]
  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Wed, 16 Jul 2014 00:44:15 +0200

systemd (208-5) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 13:41:32 +0200

systemd (208-4) experimental; urgency=medium

  * Merge changes from unstable branch.
  * Drop alternative dependency on systemd-shim in libpam-systemd. The
    systemd-shim package no longer provides an environment to run
    systemd-logind standalone. See #752939 for further details.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 01:22:11 +0200

systemd (208-3) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Wed, 25 Jun 2014 11:29:07 +0200

systemd (208-2) experimental; urgency=medium

  [ Sjoerd Simons ]
  * Don't stop a running user manager from garbage collecting the users. Fixes