@@ -1,34 +1,1 @@
-usr/lib/*/libsystemd-login.so
 usr/lib/*/pkgconfig/libsystemd-login.pc
-usr/include/systemd/sd-login.h
-usr/share/man/man3/sd_login*
-usr/share/man/man3/sd-login.3
-usr/share/man/man3/sd_get_seats.3
-usr/share/man/man3/sd_get_sessions.3
-usr/share/man/man3/sd_get_uids.3
-usr/share/man/man3/sd_get_machine_names.3
-usr/share/man/man3/sd_pid_get_session.3
-usr/share/man/man3/sd_pid_get_unit.3
-usr/share/man/man3/sd_pid_get_user_unit.3
-usr/share/man/man3/sd_pid_get_owner_uid.3
-usr/share/man/man3/sd_pid_get_machine_name.3
-usr/share/man/man3/sd_pid_get_slice.3
-usr/share/man/man3/sd_session_is_active.3
-usr/share/man/man3/sd_session_get_state.3
-usr/share/man/man3/sd_session_get_uid.3
-usr/share/man/man3/sd_session_get_seat.3
-usr/share/man/man3/sd_session_get_service.3
-usr/share/man/man3/sd_session_get_type.3
-usr/share/man/man3/sd_session_get_class.3
-usr/share/man/man3/sd_session_get_display.3
-usr/share/man/man3/sd_session_get_tty.3
-usr/share/man/man3/sd_session_get_vt.3
-usr/share/man/man3/sd_uid_get_state.3
-usr/share/man/man3/sd_uid_is_on_seat.3
-usr/share/man/man3/sd_uid_get_sessions.3
-usr/share/man/man3/sd_uid_get_seats.3
-usr/share/man/man3/sd_seat_get_active.3
-usr/share/man/man3/sd_seat_get_sessions.3
-usr/share/man/man3/sd_seat_can_graphical.3
-usr/share/man/man3/sd_seat_can_multi_session.3
-usr/share/man/man3/sd_seat_can_tty.3
