@@ -1,4 +1,5 @@
 udeb: libudev 1 libudev1-udeb
+libsystemd 0 libsystemd0 (= ${binary:Version})
 libsystemd-login 0 libsystemd-login0 (= ${binary:Version})
 libsystemd-journal 0 libsystemd-journal0 (= ${binary:Version})
 libsystemd-id128 0 libsystemd-id128-0 (= ${binary:Version})
